--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,15 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  padding: 30px;
+  padding: 30px 30px 10px 30px;
   align-items: center;
   justify-content: center;
   background-color: rgb(11, 151, 151);
   text-align: center;
 } 
-
+.text{
+    text-align: center;
+}
 
 .icon{
     color: #006064;
